# grafana-lgtm-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  TDD.md
src/: main.rs
src/api/: handlers.rs  server.rs
src/cli/: commands.rs
src/client/: loki.rs  mod.rs  prometheus.rs
src/core/: engine.rs
src/llm/: gemini.rs
wiki/: fv1.md  t1.md  t2.md
