[package]
name = "grafana-lgtm-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json", "query"] }
serde_json = "1.0"
gemini-rust = "1.7.1"
tokio = { version = "1.51.0", features = ["full"] }
schemars = { version = "1.0", features = ["chrono04"] }
